svc_j1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
spec:
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
